# RPLibrary

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20260412_0001_init_schema.py  20260412_0002_store_images_in_db.py
app/: security.py
app/application/: schemas.py  services.py
app/core/: config.py  entities.py  interfaces.py  security.py
app/infrastructure/: config.py  database.py  models.py  repositories.py
app/presentation/: api.py  deps.py
docs/: rplibrary-hoppscotch-collection.json  rplibrary-hoppscotch-environment.json
